2002-06-16  Jens Finke <jens@triq.net>
	* apotheke.schemas: Added apps/apotheke/diff/operation key.

	* src/apotheke-client-cvs.c (assemble_diff_cmd): Consider diff operation.

	* src/apotheke-cvs-dialogs.c (on_radiobutton_toggled),
	(init_radio_button): New functions.
	(apotheke_cvs_dialog_diff_show): Setup different diff operations
	and read users input.

	* src/apotheke-options.h: Added options for different compare types.

	* src/apotheke.glade: Renamed some widgets.

--- a/apotheke/src/apotheke.glade
+++ b/apotheke/src/apotheke.glade
@@ -118,7 +118,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkHBox" id="hbox3">
+		    <widget class="GtkHBox" id="local_tag_children">
 		      <property name="border_width">4</property>
 		      <property name="visible">True</property>
 		      <property name="homogeneous">False</property>
@@ -188,7 +188,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkTable" id="table2">
+		    <widget class="GtkTable" id="tag_tag_children">
 		      <property name="visible">True</property>
 		      <property name="n_rows">2</property>
 		      <property name="n_columns">3</property>
